[gd_scene load_steps=4 format=3 uid="uid://bxdmx3r5s1s1l"]

[ext_resource type="FontFile" uid="uid://clr6cbc2rndbr" path="res://src/assest/Font/Kenney Pixel.ttf" id="1_6kl2p"]
[ext_resource type="Script" uid="uid://cvkyeyxr3lp11" path="res://src/script/menú_principal.gd" id="1_fk8y1"]
[ext_resource type="FontFile" uid="uid://bvtm7dm52lcye" path="res://src/assest/Font/Kenney Pixel Square.ttf" id="2_fk8y1"]

[node name="Menú Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fk8y1")
metadata/_edit_lock_ = true

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Btn" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3839844
anchor_top = 0.49861112
anchor_right = 0.6160156
anchor_bottom = 0.94861114
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Btn"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Btn/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6kl2p")
theme_override_font_sizes/font_size = 45
text = "Jugar"

[node name="option" type="Button" parent="Btn/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6kl2p")
theme_override_font_sizes/font_size = 45
text = "Opciones"

[node name="exit" type="Button" parent="Btn/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6kl2p")
theme_override_font_sizes/font_size = 45
text = "Salir"

[node name="credits" type="Button" parent="Btn/VBoxContainer"]
layout_mode = 2
text = "Créditos"

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26835936
anchor_top = 0.19166666
anchor_right = 0.75859374
anchor_bottom = 0.29722223
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_fk8y1")
theme_override_font_sizes/font_size = 50
text = "Dugeron Heart "
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Btn/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Btn/VBoxContainer/option" to="." method="_on_start_2_pressed"]
[connection signal="pressed" from="Btn/VBoxContainer/exit" to="." method="_on_start_3_pressed"]
[connection signal="pressed" from="Btn/VBoxContainer/credits" to="." method="_on_credits_pressed"]
